gitops/deployments/nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: nginx
