gitops/deployments/nginx/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-active
  namespace: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-preview
  namespace: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
