gitops/deployments/nginx/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
