gitops/deployments/nginx/mesh-security.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: nginx
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: nginx-from-ingress-gateway
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway
      to:
        - operation:
            ports: ["8080"]
